// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an event view component with all props 1`] = `
<div
  className="ui container view-wrapper event-view"
>
  <h1
    className="documentFirstHeading"
  >
    Hello World!
  </h1>
  <p
    className="documentDescription"
  >
    Hi
  </p>
  <div
    className="ui right floated segment"
  >
    <div
      className="ui dividing sub header"
    >
      What
    </div>
    <div
      className="ui list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Guillotina
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Volto
      </div>
    </div>
    <div
      className="ui dividing sub header"
    >
      When
    </div>
    <p
      className="event-when"
    >
      <span
        className="start"
      >
        <span
          className="start-date"
        >
          Jun 23, 2019
        </span>
        <span>
           
        </span>
        <span
          className="start-time"
        >
          3:20 PM
        </span>
      </span>
       to 
      <span
        className="end"
      >
        <span
          className="end-date"
        >
          Jun 24, 2019
        </span>
        <span>
           
        </span>
        <span
          className="end-time"
        >
          3:20 PM
        </span>
      </span>
    </p>
    <div
      className="ui dividing sub header"
    >
      All dates
    </div>
    <div
      className="ui list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Jun 23, 2019
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Jun 30, 2019
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Jul 7, 2019
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Jul 14, 2019
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Jul 21, 2019
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Jul 28, 2019
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Aug 4, 2019
      </div>
    </div>
    <div
      className="ui dividing sub header"
    >
      Where
    </div>
    <p>
      Volto, Plone
    </p>
    <div
      className="ui dividing sub header"
    >
      Contact Name
    </div>
    <p>
      <a
        href="mailto:test@example.com"
      >
        John Doe
      </a>
    </p>
    <div
      className="ui dividing sub header"
    >
      Contact Phone
    </div>
    <p>
      0123456789
    </p>
    <div
      className="ui dividing sub header"
    >
      Attendees
    </div>
    <div
      className="ui list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        John Doe
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Mario Rossi
      </div>
    </div>
    <div
      className="ui dividing sub header"
    >
      Website
    </div>
    <p>
      <a
        href="https://www.example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Visit external website
      </a>
    </p>
  </div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello World!</p>",
      }
    }
  />
</div>
`;

exports[`renders an event view component with only required props 1`] = `
<div
  className="ui container view-wrapper event-view"
>
  <h1
    className="documentFirstHeading"
  >
    Hello World!
  </h1>
  <div
    className="ui right floated segment"
  >
    <div
      className="ui dividing sub header"
    >
      When
    </div>
    <p
      className="event-when same-day"
    >
      <span
        className="start-date"
      >
        Jun 23, 2019
      </span>
       from 
      <span
        className="start-time"
      >
        3:20 PM
      </span>
       to 
      <span
        className="end-time"
      >
        4:20 PM
      </span>
    </p>
  </div>
</div>
`;

exports[`renders an event view component without links to api in the text 1`] = `
<div
  className="ui container view-wrapper event-view"
>
  <h1
    className="documentFirstHeading"
  >
    Hello World!
  </h1>
  <div
    className="ui right floated segment"
  >
    <div
      className="ui dividing sub header"
    >
      When
    </div>
    <p
      className="event-when same-day"
    >
      <span
        className="start-date"
      >
        Jun 23, 2019
      </span>
       from 
      <span
        className="start-time"
      >
        3:20 PM
      </span>
       to 
      <span
        className="end-time"
      >
        4:20 PM
      </span>
    </p>
  </div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello World!</p><p>This is an <a href=\\"/foo/bar\\">internal link</a> and a <a href=\\"/foo/baz\\">second link</a></p>",
      }
    }
  />
</div>
`;
